--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<head>
 		<title> Project </title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 	</head>
 
 	<body>
-		<button id = "addCategory">Add category</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#categoryModal">Add category</button>
 		<button id = "editCategory">Edit category</button>
 		<button id = "deleteCategory">Delete category</button>
-		<button id = "addBookmark">Add bookmark</button>
+		<button id = "addBookmark" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bookmarkModal">Add bookmark</button>
 		<button id = "editBookmark">Edit bookmark</button>
 		<button id = "deleteBookmark">Delete bookmark</button>
 		
@@ -24,8 +25,84 @@
 			<ul id = "bookmarksList"></ul>
 		</div>
 		
+		
+		<!-- *************************************************************************** -->
+		
+		<!-- The Category Modal -->
+		<div class="modal fade" id="categoryModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<!-- Modal Header -->
+					<div class="modal-header">
+						<h4 class="modal-title">Creating of new category:</h4>
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+
+					<!-- Modal body -->
+					<div class="modal-body">
+						<div class="form-group">
+						<label for="name">Name:</label>
+						<input type="text" class="form-control" id="categoryName">
+					</div>
+					<div class="form-group">
+						<label for="description">Description:</label>
+						<input type="text" class="form-control" id="categoryDescription">
+					</div>
+					</div>
+
+					<!-- Modal footer -->
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" id="addCategory" data-dismiss="modal">Save</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		
+			<!-- The Bookmark Modal -->
+		<div class="modal fade" id="bookmarkModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<!-- Modal Header -->
+					<div class="modal-header">
+						<h4 class="modal-title">Creating of new bookmark:</h4>
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+					</div>
+
+					<!-- Modal body -->
+					<div class="modal-body">
+						<div class="form-group">
+						<label for="name">Name:</label>
+						<input type="text" class="form-control" id="name">
+					</div>
+					<div class="form-group">
+						<label for="description">Description:</label>
+						<input type="text" class="form-control" id="description">
+					</div>
+					<div class="form-group">
+						<label for="link">Link:</label>
+						<input type="text" class="form-control" id="link">
+					</div>
+				</div>
+
+					<!-- Modal footer -->
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Save</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<!-- ********************************************************************************** -->
+		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
-		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js" defer></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" defer></script>
 		<script src="myscript.js" defer></script>
 	</body>
 </html>
