--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title> Project </title>
+		<title> Bookmark Manager </title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 	</head>
@@ -11,7 +11,7 @@
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#categoryModal">Add category</button>
 		<button id = "editCategory">Edit category</button>
 		<button id = "deleteCategory">Delete category</button>
-		<button id = "addBookmark" type="button" class="btn btn-primary" data-toggle="modal" data-target="#bookmarkModal">Add bookmark</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bookmarkModal">Add bookmark</button>
 		<button id = "editBookmark">Edit bookmark</button>
 		<button id = "deleteBookmark">Delete bookmark</button>
 		
@@ -76,21 +76,21 @@
 					<div class="modal-body">
 						<div class="form-group">
 						<label for="name">Name:</label>
-						<input type="text" class="form-control" id="name">
+						<input type="text" class="form-control" id="bookmarkName">
 					</div>
 					<div class="form-group">
 						<label for="description">Description:</label>
-						<input type="text" class="form-control" id="description">
+						<input type="text" class="form-control" id="bookmarkDescription">
 					</div>
 					<div class="form-group">
 						<label for="link">Link:</label>
-						<input type="text" class="form-control" id="link">
+						<input type="text" class="form-control" id="bookmarkLink">
 					</div>
 				</div>
 
 					<!-- Modal footer -->
 					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Save</button>
+						<button type="button" class="btn btn-secondary" id="addBookmark" data-dismiss="modal">Save</button>
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 					</div>
 
