Fixed bug with autofilling of adding modal window

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	</head>
 
 	<body>
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#categoryAddingModal">Add category</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#categoryAddingModal" id = "emptyCategoryAddingModal">Add category</button>
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#categoryEditingModal" id = "fillCategoryEditingModal">Edit category</button>
 		<button id = "deleteCategory">Delete category</button>
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bookmarkAddingModal">Add bookmark</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bookmarkAddingModal" id = "emptyBookmarkAddingModal">Add bookmark</button>
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bookmarkEditingModal" id = "fillBookmarkEditingModal">Edit bookmark</button>
 		<button id = "deleteBookmark">Delete bookmark</button>
 		
